--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -25,7 +25,8 @@ display: none;
 
 /* Acá va tu código */
 #ejercicioTres {
-        margin-top: 100px;
+    position: relative;    
+    margin-top: 100px;
         margin-left: 200px;
 }
 
